refactor: fix dto naming, add "Request" for Login and Register
